gphoto2: Ignore devices without a device file

If there's no device file, which means libusb won't be able to open the
device, no need to print a warning, simply ignore the device.

https://bugzilla.gnome.org/show_bug.cgi?id=793925